--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,12 @@
+--- 
+abstract: Extract the structure of a quoted mail message
 author: Jesse Vincent <jesse@bestpractical.com>
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.67
 license: perl
-module_name: Text::Quoted
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Text-Quoted
 no_index: 
   directory: 
@@ -11,4 +15,5 @@ no_index:
 requires: 
   Text::Autoformat: 0
   Text::Tabs: 0
-version: 2.02
+  perl: 5.6.0
+version: 2.02_01
