--- a/META.yml
+++ b/META.yml
@@ -1,19 +1,25 @@
---- 
-abstract: Extract the structure of a quoted mail message
-author: 
-  - Jesse Vincent <jesse@bestpractical.com>
+---
+abstract: 'Extract the structure of a quoted mail message'
+author:
+  - 'Jesse Vincent <jesse@bestpractical.com>'
+build_requires:
+  ExtUtils::MakeMaker: 6.42
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.94'
 license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Text-Quoted
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   Text::Autoformat: 0
   perl: 5.6.0
-version: 2.05
+resources:
+  license: http://dev.perl.org/licenses/
+version: 2.06
